# Meta-PyTorch-OpenEnv-Hackathon

./: .dockerignore  .gitignore  README.md  admin-login.html  demo_run.py  index.html  inference.py  openenv.yaml  pyproject.toml  user-login.html
crisis_commander_env/: __init__.py  baselines.py  client.py  grader.py  models.py  openenv_compat.py  scenarios.py  simulator.py
examples/: sample_actions.json  strategy_notes.md
server/: Dockerfile  __init__.py  app.py  crisis_commander_environment.py  hf_strategist.py  requirements.txt  runtime.py
static/: app.js  auth.css  auth.js  styles.css
tests/: test_baselines.py  test_hf_strategist.py  test_simulator.py
